# arzor

./: .env  .env.development  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1764872165_create_set_type_table.py  1764872166_create_set_table.py  1764872167_create_card_table.py  1764872168_create_card_face_table.py  1764873931_create_card_rulling_table.py  1764875852_add_timestamp_fields_and_descriptions.py  1765123540_make_set_type_id_nullable.py  1765126264_change_column_name.py  1765150549_add_icon_uri_column.py  1765278534_update_card_rulling_table.py  1765376450_update_card_table.py  1765376933_update_non_foil_to_nonfoil.py  1765551897_update_cards_table.py  1765552025_update_card_faces_table.py  1765552839_add_cmc_field.py  1765554523_update_mana_cost_fields_length.py  1765772713_add_colors_field_in_card_face_table.py  1766067832_remove_oracle_id_field_from_card_.py  1766071450_add_published_at_field_in_card_ruling_.py  c5c83d10c36e_add_colors_field_in_card_face_table.py  d990023dd35f_update_card_table.py
scripts/: generate_ascii_tree.py  insert_set_types.py  reorganize_migrations.py  scryfall.py  setup-database.py  update-packages.py
src/: main.py
src/application/use_cases/card/: __init__.py  create_card_rulings_use_case.py  dto.py  (+2 more)
src/domain/entities/: __init__.py  base.py  card.py  card_face.py  card_ruling.py  card_rulling.py  set.py  set_type.py
src/domain/enums/: set_type.py
src/domain/exceptions/: __init__.py  base.py  entity_alredy_exists_execption.py  entity_not_found_execption.py  validation_exception.py
src/domain/value_objects/: __init__.py  card.py  order_type.py  pagination.py
src/infra/config/: settings.py
src/infra/database/: base.py
src/infra/logging/: structlog_logger.py
src/presentation/api/: dependencies.py  exception_handlers.py
(+47 files in other folders)
