[project]
name = "api-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [ 
  "fastapi[standard]==0.123.8", 
  "structlog==25.5.0", 
  "pydantic-settings==2.12.0", 
  "pydantic==2.12.5"
]

[dependency-groups]
dev = [
  "toml==0.10.2",
  "requests==2.32.5",
  "black==25.11.0",
  "watchfiles==1.1.1",
  "mypy==1.19.0",
  "ruff==0.14.7",
  "packaging==25.0"
]
test = [ 
  "pytest==9.0.1", 
  "pytest-asyncio==1.3.0", 
  "pytest-env==1.2.0", 
  "pytest-cov==7.0.0"
]
production = [ 
  "python-json-logger==4.0.0"
]



[tool.black]
line-length = 88
target-version = [ "py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [ "E", "F", "W", "I", "N", "B", "C90", "UP"]
ignore = [ "E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
[[tool.mypy.overrides]]
module = [ "structlog.*",]
ignore_missing_imports = true

[tool.setuptools.package-dir]
"" = "src"

[tool.coverage.report]
exclude_also = [ "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod"]

[tool.coverage.run]
omit = [ "*/__init__.py", "*/health/*", "*/main.py"]

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401"]

[tool.setuptools.packages.find]
include = [ "src*"]
exclude = [ "tmp*"]
